--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 runtime = electron
-target = 7.1.7
+target = 19.1.7
 target_arch = x64
-disturl = https://atom.io/download/atom-shell
+disturl = https://electronjs.org/headers
 export npm_config_runtime=electron
 export npm_config_build_from_source=true
