--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "colorpicker",
   "productName": "colorpicker",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
   "main": "src/main.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "release-window": "electron-builder --publish=never --config colorpicker-build.json --win nsis portable",
     "nightly": "electron-builder --publish=never --config colorpicker-build-nightly.json",
     "nightly-linux": "electron-builder --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
-    "rebuild": "npm rebuild --runtime=electron --target=18.2.3 --disturl=https://electronjs.org/headers --abi=103"
+    "rebuild": "npm rebuild --runtime=electron --target=19.1.7 --disturl=https://electronjs.org/headers --abi=106"
   },
   "repository": "https://github.com/toinane/colorpicker",
   "keywords": [
@@ -29,19 +29,19 @@
     "crea-that"
   ],
   "dependencies": {
-    "electron-json-storage": "^4.5.0",
+    "electron-json-storage": "^4.6.0",
     "request": "^2.88.2",
     "robotjs": "github:Toinane/robotjs",
-    "semver": "^7.3.7"
+    "semver": "^7.3.8"
   },
   "optionalDependencies": {
     "iohook": "^0.9.3",
-    "osx-mouse": "git+https://github.com/Toinane/osx-mouse",
+    "osx-mouse": "github:Toinane/osx-mouse",
     "win-mouse": "github:Toinane/win-mouse"
   },
   "devDependencies": {
-    "electron": "^18.2.3",
-    "electron-builder": "^23.0.3",
+    "electron": "^19.1.7",
+    "electron-builder": "^23.6.0",
     "standard": "^17.0.0"
   },
   "author": {
