--- a/package.json
+++ b/package.json
@@ -32,58 +32,59 @@
   "homepage": "https://colorpicker.fr",
   "license": "CECILL-2.1",
   "scripts": {
-    "postinstall": "yarn electron-rebuild",
+    "postinstall": "npx electron-rebuild",
     "clean": "rm -rf dist release",
     "dev:front": "webpack serve --config-name front --mode development --config ./config/webpack.config.js",
     "dev:back": "webpack --config-name back --mode development --config ./config/webpack.config.js",
-    "dev": "concurrently -k -n \"WEBPACK,ELECTRON\" -c \"bgGreen,bgBlue\" \"yarn dev:front\" \"yarn dev:back\"",
-    "build": "yarn clean && webpack --mode production --config ./config/webpack.config.js",
-    "start": "yarn build && electron .",
-    "release:nightly": "yarn build && node scripts/build-app.js",
-    "release:stable": "yarn build && cross-env BUILD_RELEASE=true node scripts/build-app.js",
+    "dev": "concurrently -k -n \"WEBPACK,ELECTRON\" -c \"bgGreen,bgBlue\" \"npm run dev:front\" \"npm run dev:back\"",
+    "build": "npm run clean && webpack --mode production --config ./config/webpack.config.js",
+    "start": "npm run build && electron .",
+    "release:nightly": "npm run build && node scripts/build-app.js",
+    "release:stable": "npm run build && cross-env BUILD_RELEASE=true node scripts/build-app.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "test": "yarn build && playwright test"
+    "test": "npm run build && playwright test"
   },
   "dependencies": {
+    "colorjs.io": "^0.4.2",
     "culori": "git+https://github.com/Toinane/culori.git#d02dd95",
-    "i18next": "^21.6.16",
-    "preact": "^10.7.1",
-    "recoil": "^0.7.2",
-    "wouter-preact": "^2.8.0-alpha.2"
+    "i18next": "^22.0.6",
+    "preact": "^10.11.3",
+    "recoil": "^0.7.6",
+    "wouter-preact": "^2.9.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.21.1",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "concurrently": "^7.1.0",
+    "@playwright/test": "^1.28.1",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "electron": "^18.2.0",
-    "electron-builder": "^23.0.3",
-    "electron-notarize": "^1.2.1",
-    "electron-rebuild": "^3.2.7",
-    "eslint": "^8.14.0",
+    "css-loader": "^6.7.2",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "electron": "^21.3.1",
+    "electron-builder": "^23.6.0",
+    "electron-notarize": "^1.2.2",
+    "electron-rebuild": "^3.2.9",
+    "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-webpack-plugin": "^3.1.1",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.0.3",
-    "mini-css-extract-plugin": "^2.6.0",
-    "playwright": "^1.21.1",
-    "prettier": "^2.6.2",
-    "terser-webpack-plugin": "^5.3.1",
+    "jest": "^29.3.1",
+    "mini-css-extract-plugin": "^2.7.0",
+    "playwright": "^1.28.1",
+    "prettier": "^2.8.0",
+    "terser-webpack-plugin": "^5.3.6",
     "tree-kill-promise": "^2.0.8",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.6.4",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.9.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
